# RUNECLAW-OKX-AI

./: .gitignore  .gitmodules  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: OKX_OPPORTUNITIES.md
okx-ai/: README.md  manifest.json
runeclaw_okx/: __init__.py  attestation.py  extended_server.py  http_transport.py  okx_data.py  okx_dex.py  payments.py  transport.py
scripts/: generate_a2mcp_manifest.py  okx_dex_smoke.py
skills/: README.md
skills/runeclaw-analyze/: SKILL.md
skills/runeclaw-quant/: SKILL.md
skills/runeclaw-shield/: SKILL.md
tests/: test_a2mcp_manifest.py  test_attestation.py  test_extended_server.py  test_http_transport.py  test_mcp_transport.py  test_okx_data.py  test_okx_dex.py  test_payments.py  test_skills.py
